<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tplink.sdk.tpopensdkdemo.device.TimeRebootActivity">

    <include layout="@layout/view_title_bar"
        android:id="@+id/title_bar"
        style="@style/ConstraintLayout_title_bar"/>

    <TextView
        android:id="@+id/time_reboot_tv"
        style="@style/device_add_btn"
        app:layout_constraintTop_toBottomOf="@id/title_bar"/>

    <TextView
        android:id="@+id/time_reboot_day_tv"
        style="@style/device_add_btn"
        app:layout_constraintTop_toBottomOf="@id/time_reboot_tv"/>

    <TextView
        android:id="@+id/time_reboot_time_tv"
        style="@style/device_add_btn"
        app:layout_constraintTop_toBottomOf="@id/time_reboot_day_tv"/>

    <EditText
        android:id="@+id/enter_time_edt"
        style="@style/match_parent_tv"
        app:layout_constraintTop_toBottomOf="@id/time_reboot_time_tv"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/time_confirm_tv"
        style="@style/device_add_btn"
        app:layout_constraintTop_toBottomOf="@id/enter_time_edt"
        android:text="@string/reboot_modify_time"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/day_confirm_tv"
        style="@style/device_add_btn"
        app:layout_constraintTop_toBottomOf="@id/time_confirm_tv"
        android:text="@string/reboot_modify_day"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/time_reboot_confirm_tv"
        style="@style/match_parent_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/reboot_operate"
        android:textColor="@color/white"
        android:background="@color/text_blue_dark"/>

    <TextView
        android:id="@+id/time_reboot_now_tv"
        style="@style/match_parent_btn"
        app:layout_constraintBottom_toTopOf="@id/time_reboot_confirm_tv"
        android:text="@string/reboot_now"
        android:textColor="@color/white"
        android:background="@color/text_blue_dark"
        android:layout_marginBottom="4dp"/>
</android.support.constraint.ConstraintLayout>
