<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/view_title_bar"
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/record_plan_day_start_time_tv"
        style="@style/match_parent_linearLayout_tv"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/record_plan_advance_pre"/>

    <EditText
        android:id="@+id/record_plan_pre"
        style="@style/match_parent_linearLayout_tv"
        android:editable="true"/>

    <TextView
        android:id="@+id/record_plan_day_end_time_tv"
        style="@style/match_parent_linearLayout_tv"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/record_plan_advance_delay"/>

    <EditText
        android:id="@+id/record_plan_delay"
        style="@style/match_parent_linearLayout_tv"
        android:editable="true"/>

    <TextView
        android:id="@+id/record_plan_edit_tv"
        style="@style/match_parent_linearLayout_tv"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/record_paln_advance_set"
        android:textColor="@color/white"
        android:background="@color/text_blue_dark"/>
</LinearLayout>
